HW9.14
replace asList to List.of